infrastructure/kubernetes/alpha/cilium-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: build-controller-kubernetes-api
  namespace: lrail-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: build-controller
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "8443"
              protocol: TCP
